--- a/php.ini
+++ b/php.ini
@@ -274,7 +274,12 @@ ldap.max_links = -1
 
 [ffi]
 
-zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20200930/xdebug.so
+
+[xdebug]
+xdebug.mode=debug,trace
+; xdebug.client_port = 9003
+; xdebug.client_host = 172.17.0.1
+xdebug.log = "/var/log/apache2/xdebug.log"
 xdebug.mode=develop,coverage,debug,profile,trace
-xdebug.start_with_request = yes
 xdebug.discover_client_host=1
+
